# CryptoJS-PoC

./: .gitignore  README.md  setup_keys.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: asym_submit.html  asym_view.html  index.html  sym_submit.html  sym_view.html
frontend/css/: style.css
